# perov

./: .gitignore  pyproject.toml
src/perov/: extraction.py  main.py  perov-normalisation.yaml  step1a_split_joint.py  step1b_marker.py  step1c_normalization.py
