[project]
name = "perov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling",
    "marker-pdf[full]>=1.10.1",
    "neo4j>=6.1.0",
    "numpy>=2.4.1",
    "orjson>=3.11.5",
    "pillow>=10.4.0",
    "pydot>=4.0.1",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.3",
    "rdflib>=7.5.0",
    "requests>=2.32.5",
    "tabled>=0.1.26",
    "tesseract>=0.1.3",
    "torch>=2.10.0",
]

[tool.uv]
package = true

[project.scripts]
perov = "perov.main:main"
perov-step1b = "perov.step1b_normalization:main"

